--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,13 @@ dependencies {
     // jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
+    // h2
+//    runtimeOnly 'com.h2database:h2'
+
 }
 
 tasks.named('test') {
