--- a/compose-prod.yml
+++ b/compose-prod.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       cache-server:
         condition: service_healthy
-      redis-test-db:
+      planty-db:
         condition: service_healthy
 
   planty-db:
