feat: 메시지 조회

--- a/compose.yml
+++ b/compose.yml
@@ -12,3 +12,12 @@ services:
       test: [ "CMD", "mysqladmin", "ping" ] # MySQL이 healthy 한 지 판단할 수 있는 명령어
       interval: 5s # 5초 간격으로 체크
       retries: 10 # 10번까지 재시도
+
+  cache-server:
+    image: redis
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      retries: 10
