--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,20 @@ dependencies {
 
     //websocket
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    
+    //open-ai
+    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
 
+}
+
+ext {
+    set('springAiVersion', "1.0.0-M6")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+    }
 }
 
 tasks.named('test') {
